@@ -35,7 +35,7 @@ use AnyEvent::Socket ();
 =item $shell = AnyEvent;::Debug::shell $host, $service
 
 This function binds on the given host and service port and returns a
-shell object, whcih determines the lifetime of the shell. Any number
+shell object, which determines the lifetime of the shell. Any number
 of conenctions are accepted on the port, and they will give you a very
 primitive shell that simply executes every line you enter.
 
@@ -53,8 +53,8 @@ access them. Having interactive access to your programs changed that:
 having internal variables still in the global scope means you can debug
 them easier.
 
-As no authenticsation is done, in most cases it is best not to use a TCP
-port, but a unix domain socket, whcih cna be put wherever youc an access
+As no authentication is done, in most cases it is best not to use a TCP
+port, but a unix domain socket, whcih can be put wherever you can access
 it, but not others:
 
    our $SHELL = AnyEvent::Debug::shell "unix/", "/home/schmorp/shell";
@@ -127,6 +127,229 @@ sub shell($$) {
          }
       };
    }
+}
+
+=item AnyEvent::Debug::wrap [$level]
+
+Sets the instrumenting/wrapping level of all watchers that are being
+created after this call. If no C<$level> has been specified, then it
+toggles between C<0> and C<1>.
+
+A level of C<0> disables wrapping, i.e. AnyEvent works normally, and in
+its most efficient mode.
+
+A level of C<1> enables wrapping, which replaces all watchers by
+AnyEvent::Debug::Wrapped objects, stores the location where a watcher was
+created and wraps the callback so invocations of it can be traced.
+
+A level of C<2> does everything that level C<1> does, but also stores a
+full backtrace of the location the watcher was created.
+
+Instrumenting can increase the size of each watcher multiple times, and,
+especially when backtraces are involved, also slows down watcher creation
+a lot.
+
+Also, enabling and disabling instrumentation will not recover the full
+performance that you had before wrapping (the AE::xxx functions will stay
+slower, for example).
+
+Currently, enabling wrapping will also load AnyEvent::Strict, but this is
+not be relied upon.
+
+=cut
+
+our $WRAP_LEVEL;
+our $TRACE_LEVEL = 2;
+our $TRACE_NEST = 0;
+our $TRACE_CUR;
+our $POST_DETECT;
+
+sub wrap(;$) {
+   my $PREV_LEVEL = $WRAP_LEVEL;
+   $WRAP_LEVEL = @_ ? 0+shift : $WRAP_LEVEL ? 0 : 1;
+
+   if (defined $AnyEvent::MODEL) {
+      unless (defined $PREV_LEVEL) {
+         AnyEvent::Debug::Wrapped::_init ();
+      }
+
+      if ($WRAP_LEVEL && !$PREV_LEVEL) {
+         require AnyEvent::Strict;
+         @AnyEvent::Debug::Wrap::ISA = @AnyEvent::ISA;
+         @AnyEvent::ISA = "AnyEvent::Debug::Wrap";
+         AE::_reset;
+         AnyEvent::Debug::Wrap::_reset ();
+      } elsif (!$WRAP_LEVEL && $PREV_LEVEL) {
+         @AnyEvent::ISA = @AnyEvent::Debug::Wrap::ISA;
+      }
+   } else {
+      $POST_DETECT ||= AnyEvent::post_detect {
+         undef $POST_DETECT;
+         return unless $WRAP_LEVEL;
+
+         (my $level, $WRAP_LEVEL) = ($WRAP_LEVEL, undef);
+
+         require AnyEvent::Strict;
+
+         AnyEvent::post_detect { # make sure we run after AnyEvent::Strict
+            wrap ($level);
+         };
+      };
+   }
+}
+
+=item AnyEvent::Debug::path2mod $path
+
+Tries to replace a path (e.g. the file name returned by caller)
+by a module name. Returns the path unchanged if it fails.
+
+Example:
+
+   print AnyEvent::Debug::path2mod "/usr/lib/perl5/AnyEvent/Debug.pm";
+   # might print "AnyEvent::Debug"
+
+=cut
+
+sub path2mod($) {
+   keys %INC; # reset iterator
+
+   while (my ($k, $v) = each %INC) {
+      if ($_[0] eq $v) {
+         $k =~ s%/%::%g if $k =~ s/\.pm$//;
+         return $k;
+      }
+   }
+
+   my $path = shift;
+
+   $path =~ s%^\./%%;
+
+   $path
+}
+
+=item AnyEvent::Debug::cb2str $cb
+
+Using various gambits, tries to convert a callback (e.g. a code reference)
+into a more useful string.
+
+Very useful if you debug a program and have some callback, but you want to
+know where in the program the callbakc is actually defined.
+
+=cut
+
+sub cb2str($) {
+   my $cb = shift;
+
+   require B;
+
+   "CODE" eq ref $cb
+      or return "$cb";
+
+   my $cv = B::svref_2object ($cb);
+
+   my $gv = $cv->GV
+      or return "$cb";
+
+   return (AnyEvent::Debug::path2mod $gv->FILE) . ":" . $gv->LINE
+      if $gv->NAME eq "__ANON__";
+
+   return $gv->STASH->NAME . "::" . $gv->NAME;
+}
+
+package AnyEvent::Debug::Wrap;
+
+use AnyEvent (); BEGIN { AnyEvent::common_sense }
+use Scalar::Util ();
+use Carp ();
+
+sub _reset {
+   for my $name (qw(io timer signal child idle)) {
+      my $super = "SUPER::$name";
+
+      *$name = sub {
+         my ($self, %arg) = @_;
+
+         my $w;
+
+         my ($pkg, $file, $line, $sub);
+         
+         $w = 0;
+         do {
+            ($pkg, $file, $line) = caller $w++;
+         } while $pkg =~ /^(?:AE|AnyEvent::Socket|AnyEvent::Util|AnyEvent::Debug|AnyEvent::Strict)$/;
+
+         $sub = (caller $w++)[3];
+
+         my $cb = $arg{cb};
+         $arg{cb} = sub {
+            return &$cb
+               unless $TRACE_LEVEL;
+
+            local $TRACE_NEST = $TRACE_NEST + 1;
+            local $TRACE_CUR  = "$w";
+            print "$TRACE_NEST enter $TRACE_CUR\n" if $TRACE_LEVEL;
+            eval {
+               local $SIG{__DIE__};
+               &$cb;
+            };
+            if ($@) {
+               print "$TRACE_NEST ERROR $TRACE_CUR $@";
+            }
+            print "$TRACE_NEST leave $TRACE_CUR\n" if $TRACE_LEVEL;
+         };
+
+         $self = bless {
+            type   => $name,
+            w      => $self->$super (%arg),
+            file   => $file,
+            line   => $line,
+            sub    => $sub,
+            cur    => $TRACE_CUR,
+            cb     => $cb,
+         }, "AnyEvent::Debug::Wrapped";
+
+         $w->{bt} = Carp::longmess ""
+            if $WRAP_LEVEL >= 2;
+
+         Scalar::Util::weaken ($w = $self);
+         Scalar::Util::weaken ($AnyEvent::Debug::Wrapped{Scalar::Util::refaddr $self} = $self);
+
+         print "$TRACE_NEST creat $w\n" if $TRACE_LEVEL;
+
+         $self
+      };
+   }
+}
+
+package AnyEvent::Debug::Wrapped;
+
+use AnyEvent (); BEGIN { AnyEvent::common_sense }
+
+sub _init {
+   require overload;
+   import overload
+      '""'     => sub {
+         $_[0]{str} ||= do {
+            my ($pkg, $line) = @{ $_[0]{caller} };
+
+            ($_[0]{cur} ? "$_[0]{cur}/" : "")
+            . (AnyEvent::Debug::path2mod $_[0]{file})
+            .":"
+            . $_[0]{line}
+            . ($_[0]{sub} =~ /^[^(]/ ? "($_[0]{sub})" : "")
+            . ">"
+            . $_[0]{type}
+            . ">"
+            . (AnyEvent::Debug::cb2str $_[0]{cb})
+         };
+      },
+      fallback => 1;
+}
+
+sub DESTROY {
+   print "$TRACE_NEST dstry $_[0]\n" if $TRACE_LEVEL;
+
+   delete $AnyEvent::Debug::Wrapped{Scalar::Util::refaddr $_[0]};
 }
 
 1;
